Fixed logo outer circle wrong position in Safari

--- a/styles/main.css
+++ b/styles/main.css
@@ -79,10 +79,10 @@ body::-webkit-scrollbar-thumb {
 
 @keyframes spin {
   from {
-    transform: translate(-50%, -50%) rotate(0deg);
+    transform: translate(-40px, -40px) rotate(0deg);
   }
   to {
-    transform: translate(-50%, -50%) rotate(360deg);
+    transform: translate(-40px, -40px) rotate(360deg);
   }
 }
 
